# random

./: .env.example  .eslintrc.mjs  .gitignore  .prettierrc  .solcover.js  .tool-versions  Dockerfile  README.md  THIRD-PARTY-NOTICES.md  bun.lockb  config.ts  docker-compose.yml  example.config.ts  extendable.config.ts  hardhat.config.ts  knexfile.ts  notes.md  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  progress.txt  schema.graphql  subgraph.template.yaml
.github/actions/pnpm/: action.yml
.github/workflows/: main.yml  test.yml
configs/: evm943.json
contracts/: Constants.sol  Consumer.sol  Errors.sol  FundedConsumer.sol  PreimageInfo.sol  PreimageLocation.sol  Random.sol  Reader.sol  SlotDerivation.sol  StorageSlot.sol
contracts/implementations/: ERC20.sol  IRandom.sol  Random.sol
contracts/test/: ERC20.sol  Etcher.sol
examples/games/: P2P_COINFLIP_DESIGN.md  README.md
examples/games/pow-grinder/: .gitignore  Cargo.toml  PUBLISHING.md  index.d.ts  index.js  package.json
examples/games/pow-grinder/pkg/: pow_grinder.d.ts  pow_grinder.js  pow_grinder_bg.wasm  pow_grinder_bg.wasm.d.ts
examples/games/pow-grinder/src/: lib.rs
lib/: generate.ts  global.d.ts  utils.ts
lib/db/: config.ts  index.ts  tables.ts  utils.ts
src/: generate.ts  types.ts  utils.ts
src/mapping/: common.ts  consumer.ts  random.ts  reader.ts
tasks/: collect.ts  ink.ts  produce.ts  storeHashes.ts  utils.ts  writeHashesOnChain.ts
test/: Consumer.test.ts  Random.test.ts  Reader.test.ts  expectations.ts  utils.ts
tests/: .latest.json
(+310 files in other folders)
